src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__p_existing_directory.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -P mydir ls\")?"
---
env -P mydir ls

0   3   `env`    CALLABLE `env`
3   5   ` -`     punctuation.definition.parameter
5   6   `P`      variable.parameter.option
7   12  `mydir`  meta.function-call.arguments + dynamic.path.directory.complete
13  15  `ls`     CALLABLE `ls`
