src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__s_c_existing_directory.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -S -C mydir ls\")?"
---
env -S -C mydir ls

0   3   `env`    CALLABLE `env`
3   5   ` -`     punctuation.definition.parameter
5   6   `S`      variable.parameter.option
6   8   ` -`     punctuation.definition.parameter
8   9   `C`      variable.parameter.option
10  15  `mydir`  meta.function-call.arguments + dynamic.path.directory.complete
16  18  `ls`     CALLABLE `ls`
